# forge

./: .codeup-ci.yml  .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  ARCHIVE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  HANDOFF.md  Makefile  NOTICE  README.md  README.zh-CN.md  STATUS.md  TODOS.md  dev.bat  dev.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.selfhost.yml  docker-compose.yml  pom.xml
.claude/: launch.json  (+1 more)
ai-worker/: .coverage  .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml  requirements.txt  start.sh
ai-worker/skills/: analyze.md  generate.md  plan.md  profile.md  review.md  test-writing.md
ai-worker/skills/languages/: go-project.yaml  java-project.yaml  node-project.yaml  python-project.yaml  rust-project.yaml
ai-worker/src/: api_server.py  config.py  worker.py
ai-worker/src/activities/: analyze.py  generate.py  plan.py  profile.py  review.py  test_writing.py
ai-worker/tests/: conftest.py  test_agent_loop.py  test_agents.py  test_agents_extended.py  test_analyze_flow.py  test_api_providers.py  test_api_server.py  test_api_server_route.py  test_build_verify.py  test_builder_parallel.py  test_ci_autofix.py  test_client.py  test_context_builder.py  test_context_cache.py  test_context_tools.py  test_hook_executor.py  test_integration_harness.py  test_messages.py  test_pair_pipeline.py  test_permission_checker.py  test_profile_scan.py  test_project_language.py  test_project_skills.py  test_query_engine.py  test_router.py  test_skill_loader.py  test_tool_registry.py
(+1071 files in other folders)
